--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 go.work
 go.work.sum
 
-src/conf/environments
+src/conf/environments/slack.yml
+src/conf/environments/staywatch.yml
 .env
 .DS_Store
