--- a/docker/app/dockerfile
+++ b/docker/app/dockerfile
@@ -1,11 +1,12 @@
 FROM golang:1.24
 
-RUN apt update && apt install -y git &&\
-    apt install -y lsof &&\
-    go install github.com/air-verse/air@latest
+WORKDIR /stay_watch-slackbot
 
-WORKDIR /stay_watch-slackbot/src
+RUN apt update &&\
+    apt install -y git &&\
+    apt install -y lsof
 
-# COPY ./src /root/src
+RUN cd src &&\
+    go build -o slackbot
 
-CMD ["air", "-c", ".air.toml"]
+CMD ["./slackbot"]
