--- a/docker/app/dockerfile
+++ b/docker/app/dockerfile
@@ -4,9 +4,11 @@ WORKDIR /stay_watch-slackbot
 
 RUN apt update &&\
     apt install -y git &&\
-    apt install -y lsof
+    apt install -y lsof &&\
+    mkdir src
 
-RUN cd src &&\
-    go build -o slackbot
+COPY . /stay_watch-slackbot/src
+
+RUN go build -o slackbot
 
 CMD ["./slackbot"]
