--- a/docker/app/dockerfile
+++ b/docker/app/dockerfile
@@ -2,14 +2,14 @@ FROM golang:1.24
 
 WORKDIR /stay_watch-slackbot
 
-RUN apt-get update &&\
-    apt-get install -y git &&\
-    apt-get install -y lsof &&\
+RUN apt-get update && \
+    apt-get install -y git lsof && \
     mkdir src
 
 COPY ./src /stay_watch-slackbot/src
 
-RUN cd src &&\
-    go build -o slackbot
+WORKDIR /stay_watch-slackbot/src
+RUN go build -o slackbot && mv slackbot ../
 
+WORKDIR /stay_watch-slackbot
 CMD ["./slackbot"]
